--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - uses: jamesgeorge007/github-activity-readme@v0.4.4
         env:
